Handle Duplicate Video Url