@@ -16,6 +16,7 @@ import org.springframework.stereotype.Service;
 
 import java.time.Instant;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -31,31 +32,30 @@ public class DisasterSchedulerServiceImpl implements DisasterSchedulerService {
         long startTime = System.currentTimeMillis();
 
         try {
-            // Step 1: collection
+            // Step 1: Collection
             YouTubeSearchList youtubeDisasterData = youTubeService.fetchRecentNaturalDisastersPosts();
-            // sub step 1: serialize result
+            // Sub step 1: Serialize result
             List<RawDisasterData> rawDisasterData = serializeYouTubeResults(youtubeDisasterData.getItems());
             log.info("Number of raw disasters scrapped: {}", rawDisasterData.size());
 
             log.info("Processing Raw Disaster Data using AI...");
-            // Step 2: AI procession
+            // Step 2: AI processing
             List<AIProcessedDisaster> aiProcessedData = generativeAIService.processRawDisasterData(rawDisasterData);
             log.info("Number of raw disasters processed using AI: {}", aiProcessedData.size());
 
             log.info("Mapping AI processed Data back to Original Disaster Data...");
-            // sub step 2: map AI processed data with original data
+            // Sub step 2: Map AI processed data with original data
             List<ProcessedDisasterData> mappedDisasterData = mapAIProcessedDataWithOriginal(youtubeDisasterData.getItems(), aiProcessedData);
             log.info("Number of processed mapped disasters remains: {}", mappedDisasterData.size());
 
             log.info("Saving final Mapped Data...");
             // Step 3: Save mapped and processed disasters
             boolean success = saveProcessAndMappedDisasters(mappedDisasterData);
-            log.info("Status of saving last 20 minutes of disasters from youtube, " + success);
+            log.info("Status of saving last 20 minutes of disasters from YouTube: {}", success);
 
         } catch (Exception e) {
-            log.info("Something went wrong collecting disasters from youtube, {}", e.getMessage());
+            log.error("Something went wrong collecting disasters from YouTube: {}", e.getMessage());
             throw e;
-
         }
 
         return (double) (System.currentTimeMillis() - startTime) / 1000;
@@ -63,12 +63,12 @@ public class DisasterSchedulerServiceImpl implements DisasterSchedulerService {
 
     private List<RawDisasterData> serializeYouTubeResults(List<YouTubeSearchList.SearchResult> disasterData) {
         return disasterData.parallelStream()
-                .map((disaster) -> RawDisasterData.builder()
+                .map(disaster -> RawDisasterData.builder()
                         .id(disaster.getId().getVideoId())
                         .title(disaster.getSnippet().getTitle())
                         .description(disaster.getSnippet().getDescription())
                         .build())
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private List<ProcessedDisasterData> mapAIProcessedDataWithOriginal(
@@ -76,21 +76,20 @@ public class DisasterSchedulerServiceImpl implements DisasterSchedulerService {
             List<AIProcessedDisaster> aiProcessedData
     ) {
         return youtubeDisasterData.parallelStream()
-                .map((disasterItem) -> {
+                .map(disasterItem -> {
                     Optional<AIProcessedDisaster> currentAIProcessedData = aiProcessedData.stream()
                             .filter(data -> Objects.equals(data.getId(), disasterItem.getId().getVideoId()))
                             .findFirst();
 
                     if (currentAIProcessedData.isEmpty()) {
                         return null;
-
                     } else {
                         AIProcessedDisaster aiProcessedDisaster = currentAIProcessedData.get();
                         Set<Video> videos = Set.of(
                                 Video.builder()
                                         .title(disasterItem.getSnippet().getTitle())
                                         .userId(disasterItem.getSnippet().getChannelId())
-                                        .url("https://www.youtube.com/watch?v=" + disasterItem.getId())
+                                        .url("https://www.youtube.com/watch?v=" + disasterItem.getId().getVideoId())
                                         .thumbnail(disasterItem.getSnippet().getThumbnails().getMedium().getUrl())
                                         .description(disasterItem.getSnippet().getDescription())
                                         .publishedDate(Instant.parse(disasterItem.getSnippet().getPublishedAt()))
@@ -109,55 +108,66 @@ public class DisasterSchedulerServiceImpl implements DisasterSchedulerService {
                     }
                 })
                 .filter(Objects::nonNull)
-                .toList();
+                .collect(Collectors.toList());
     }
-
 
     private boolean saveProcessAndMappedDisasters(List<ProcessedDisasterData> mappedDisasterData) {
         try {
-            List<Disaster> disastersToSave = mappedDisasterData.parallelStream()
-                    .map(this::serializeDuplicateDisaster)
+            // Get all existing records by their recordIds
+            Set<String> recordIds = mappedDisasterData.stream()
+                    .map(ProcessedDisasterData::getRecordId)
+                    .collect(Collectors.toSet());
+
+            List<Disaster> existingDisasters = disasterRepository.findAllByRecordIdIn(recordIds);
+            Map<String, Disaster> disasterMap = existingDisasters.stream()
+                    .collect(Collectors.toMap(Disaster::getRecordId, disaster -> disaster));
+
+            List<Disaster> disastersToSave = mappedDisasterData.stream()
+                    .map(mappedDisaster -> serializeOrUpdateDisaster(mappedDisaster, disasterMap))
                     .filter(Objects::nonNull)
-                    .toList();
+                    .collect(Collectors.toList());
 
             disasterRepository.saveAll(disastersToSave);
             return true;
 
         } catch (Exception e) {
-            log.error("Error in saving set of new disasters");
+            log.error("Error in saving set of new disasters", e);
             return false;
         }
     }
 
-    private Disaster serializeDuplicateDisaster(ProcessedDisasterData mappedDisaster) {
+    private Disaster serializeOrUpdateDisaster(ProcessedDisasterData mappedDisaster, Map<String, Disaster> existingDisasters) {
         try {
-            log.info("Processing record id{} : ", mappedDisaster.getRecordId());
-            Optional<Disaster> similarDisaster = disasterRepository.findByRecordIdWithVideos(mappedDisaster.getRecordId());
+            log.info("Processing record id {} : ", mappedDisaster.getRecordId());
 
-            if (similarDisaster.isEmpty()) {
-                Disaster newDisaster = Disaster.builder()
+            Disaster disaster = existingDisasters.get(mappedDisaster.getRecordId());
+
+            if (disaster == null) {
+                disaster = Disaster.builder()
                         .recordId(mappedDisaster.getRecordId())
                         .title(mappedDisaster.getTitle())
                         .summary(mappedDisaster.getSummary())
                         .incidentLocation(mappedDisaster.getIncidentLocation())
                         .incidentType(mappedDisaster.getIncidentType())
                         .build();
-                mappedDisaster.getVideos().forEach((video -> video.setDisaster(newDisaster)));
-                newDisaster.setVideos(mappedDisaster.getVideos());
-                return newDisaster;
+                disaster.setVideos(mappedDisaster.getVideos());
 
             } else {
-                mappedDisaster.getVideos().forEach((video -> video.setDisaster(similarDisaster.get())));
-                similarDisaster.get().getVideos().addAll(mappedDisaster.getVideos());
-                return similarDisaster.get();
-
+                disaster.setSummary(mappedDisaster.getSummary() + "\n" +  disaster.getSummary());
+                disaster.setIncidentLocation(mappedDisaster.getIncidentLocation());
+                disaster.setIncidentType(mappedDisaster.getIncidentType());
+                disaster.getVideos().addAll(mappedDisaster.getVideos());
             }
 
+            // Set disaster reference for videos
+            Disaster finalDisaster = disaster;
+            mappedDisaster.getVideos().forEach(video -> video.setDisaster(finalDisaster));
+
+            return disaster;
+
         } catch (Exception e) {
-            log.error("Error serializing disaster of Id {} for saving", mappedDisaster.getId());
+            log.error("Error serializing disaster of Id {} for saving", mappedDisaster.getId(), e);
             return null;
         }
     }
-
-
 }
